--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Xpengkang's homepage
-description: enjoy today :>
+title: XPK's homepage
+description: enjoy today :p
