--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+remote_theme: "mmistakes/minimal-mistakes"
 title: XPK's homepage
 description: enjoy today :p
 date: YYYY-MM-DD hh:mm:ss -0000
