--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,22 @@
 # Site settings
-title: Mickey 小站
-SEOTitle: 白皓的博客 | Mickey 小站
+title: 转码自留地
+SEOTitle: Code Career Land | 转码自留地
 header-img: img/home-bg.jpg
-email: buptbh@163.com
-description: "web前端 | 白皓，Web & Front-End Engineer | 这里是 @mickey0524白皓 的个人博客，与你一起发现更大的世界。"
-keyword: "白皓, mickey0524, byr, 白皓的博客, mickey0524 Blog, 博客, 个人网站, 互联网, 前端"
-url: "https://mickey.github.io"              # your host, for absolute URL
+email: pkdlmu@163.com
+description: "后端开发 大数据开发 | 与你一起发现更大的世界。"
+keyword: "Code Career Land, 个人网站, 互联网, 后端，Go, Java, Big Data"
+url: "https://xpengkang.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
 # SNS settings
 RSS: false
-weibo_username:     3756255342
-zhihu_username:     fen-dou-de-tuo-ge
+# weibo_username:     3756255342
+# zhihu_username:     fen-dou-de-tuo-ge
 github_username:    mickey0524
-leetcode_username:  mickey0524
+# leetcode_username:  mickey0524
+leetcode_cn_username:  zhuanmaziliudi
 
 
 
@@ -64,7 +65,7 @@ ga_domain: mickey0524.github.io
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "半世浮萍随逝水<br>一宵冷雨葬名花"
+sidebar-about-description: "不内卷<br>不躺平"
 sidebar-avatar: /img/2.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -83,18 +84,18 @@ service-worker: true
 
 # Friends
 friends: [
-    {
-        title: "if-true",
-        href: "http://if-true.com/"
-    },
-    {
-        title: "shihunyewu",
-        href: "https://shihunyewu.github.io/"
-    },
-    {
-        title: "Stephan14",
-        href: "https://stephan14.github.io/"
-    }
+    # {
+    #     title: "if-true",
+    #     href: "http://if-true.com/"
+    # },
+    # {
+    #     title: "shihunyewu",
+    #     href: "https://shihunyewu.github.io/"
+    # },
+    # {
+    #     title: "Stephan14",
+    #     href: "https://stephan14.github.io/"
+    # }
     # ,{
     #     title: "天镶的博客",
     #     href: "http://lingyu.wang/"
@@ -110,14 +111,15 @@ friends: [
     # },{
     #     title: "解旻的博客",
     #     href: "http://xieminis.me/"
-    # },{
-    #     title: "DHong Say",
-    #     href: "http://dhong.co"
-    # },{
-    #     title: "尹峰以为",
-    #     href: "http://ingf.github.io/"
-    # },{
-    #     title: "前端神盾局",
-    #     href: "http://wepiaofei.github.io/blog/"
-    # }
+    # },
+    {
+        title: "DHong Say",
+        href: "http://dhong.co"
+    },{
+        title: "尹峰以为",
+        href: "http://ingf.github.io/"
+    },{
+        title: "前端神盾局",
+        href: "http://wepiaofei.github.io/blog/"
+    }
 ]
