--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 RSS: false
 # weibo_username:     3756255342
 # zhihu_username:     fen-dou-de-tuo-ge
-github_username:    mickey0524
+github_username:    xpengkang
 # leetcode_username:  mickey0524
 leetcode_cn_username:  zhuanmaziliudi
 
