code career land

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ RSS: false
 github_username:    xpengkang
 # leetcode_username:  mickey0524
 leetcode_cn_username:  zhuanmaziliudi
+linkedin_username:  kang-peng-166848198
+bilibili_username:  490052151?spm_id_from=333.1007.0.0
 
 
 
