--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ RSS: false
 # zhihu_username:     fen-dou-de-tuo-ge
 github_username:    xpengkang
 # leetcode_username:  mickey0524
-leetcode_cn_username:  zhuanmaziliudi
+leetcode_cn_username:  u/zhuanmaziliudi
 linkedin_username:  kang-peng-166848198
 bilibili_username:  490052151?spm_id_from=333.1007.0.0
 
