--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-# weibo_username:     3756255342
-# zhihu_username:     fen-dou-de-tuo-ge
+# weibo_username:     xxxx
+# zhihu_username:     xxxx
 github_username:    xpengkang
-# leetcode_username:  mickey0524
+leetcode_username:  xpengkang
 leetcode_cn_username:  u/zhuanmaziliudi
 linkedin_username:  kang-peng-166848198
 bilibili_username:  490052151?spm_id_from=333.1007.0.0
@@ -86,34 +86,6 @@ service-worker: true
 
 # Friends
 friends: [
-    # {
-    #     title: "if-true",
-    #     href: "http://if-true.com/"
-    # },
-    # {
-    #     title: "shihunyewu",
-    #     href: "https://shihunyewu.github.io/"
-    # },
-    # {
-    #     title: "Stephan14",
-    #     href: "https://stephan14.github.io/"
-    # }
-    # ,{
-    #     title: "天镶的博客",
-    #     href: "http://lingyu.wang/"
-    # },{
-    #     title: "Luke 的自留地",
-    #     href: "http://hmqk1995.github.io"
-    # },{
-    #     title: "Ebn's Blog",
-    #     href: "http://ebnbin.com/"
-    # },{
-    #     title: "SmdCn's Blog",
-    #     href: "http://blog.smdcn.net"
-    # },{
-    #     title: "解旻的博客",
-    #     href: "http://xieminis.me/"
-    # },
     {
         title: "DHong Say",
         href: "http://dhong.co"
