--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 # weibo_username:     xxxx
-# zhihu_username:     xxxx
+zhihu_username:     peng-kang-16-21
 github_username:    xpengkang
 leetcode_username:  xpengkang
 # leetcode_cn_username:  u/zhuanmaziliudi
 linkedin_username:  kang-peng-166848198
-bilibili_username:  490052151?spm_id_from=333.1007.0.0
+# bilibili_username:  490052151?spm_id_from=333.1007.0.0
 
 
 
@@ -87,13 +87,13 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "DHong Say",
-        href: "http://dhong.co"
+        title: "代码随想录",
+        href: "https://programmercarl.com/"
     },{
-        title: "尹峰以为",
-        href: "http://ingf.github.io/"
+        title: "labuladong",
+        href: "https://labuladong.gitee.io/algo/"
     },{
-        title: "前端神盾局",
-        href: "http://wepiaofei.github.io/blog/"
+        title: "cyc2018",
+        href: "http://www.cyc2018.xyz/"
     }
 ]
