--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 # weibo_username:     xxxx
-zhihu_username:     peng-kang-16-21
+# zhihu_username:     xxxxxxxxx
 github_username:    xpengkang
 leetcode_username:  xpengkang
 # leetcode_cn_username:  u/zhuanmaziliudi
@@ -87,7 +87,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "代码随想录",
+        title: "carl",
         href: "https://programmercarl.com/"
     },{
         title: "labuladong",
