--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Mickey Blog",
-  "short_name": "Mickey Blog",
+  "name": "x Blog",
+  "short_name": "x Blog",
   "description": "About an engineer & designer who loves web.",
   "background_color": "#fff",
   "theme_color": "#000",
