--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: 转码自留地
-SEOTitle: Code Career Land | 转码自留地
+SEOTitle: xpk|转码自留地
 header-img: img/home-bg.jpg
-email: pkdlmu@163.com
-description: "后端开发 大数据开发 | 与你一起发现更大的世界。"
-keyword: "Code Career Land, 个人网站, 互联网, 后端，Go, Java, Big Data"
+# email: pkdlmu@163.com
+description: "与你一起发现更大的世界。"
+keyword: "材料转行, 个人网站, 互联网, 后端，Go, Java, Big Data"
 url: "https://xpengkang.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -26,7 +26,7 @@ linkedin_username:  kang-peng-166848198
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
-paginate: 10
+paginate: 7
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
@@ -67,8 +67,8 @@ ga_domain: xpengkang.github.io
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "不内卷<br>不躺平"
-sidebar-avatar: /img/2.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "学学代码<br>写写故事"
+sidebar-avatar: /img/sidebar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
