--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ RSS: false
 # zhihu_username:     xxxxxxxxx
 github_username:    xpengkang
 leetcode_username:  xpengkang
-# leetcode_cn_username:  u/zhuanmaziliudi
+leetcode_cn_username:  u/zhuanmaziliudi
 # linkedin_username:  
 bilibili_username:  490052151?spm_id_from=333.1007.0.0
 
